--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,38 @@
 annotated-types==0.7.0
 anyio==4.10.0
+bcrypt==4.3.0
+certifi==2025.8.3
+cffi==2.0.0
 click==8.2.1
+cryptography==45.0.7
 dnspython==1.16.0
 dotenv==0.9.9
+ecdsa==0.19.1
 fastapi==0.116.1
+fastapi-limiter==0.1.6
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 motor==3.7.1
+packaging==25.0
+passlib==1.7.4
+pluggy==1.6.0
+pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
+Pygments==2.19.2
 pymongo==4.15.0
+pytest==8.4.2
+pytest-asyncio==1.2.0
 python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
+redis==7.0.0b1
+rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 starlette==0.47.3
 typing-inspection==0.4.1
