--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   app:
     build: .
@@ -9,16 +7,8 @@ services:
       - 8000:8000
     depends_on:
       - redis
-    environment:
-      - Database_URI=${Database_URI}
-      - REDIS_URL=redis://redis:6379/0
-      - DB_name=${DB_name}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-    ulimits:
-      nproc: 65535
-      nofile:
-        soft: 20000
-        hard: 40000
+    env_file:
+      - .env.production
 
   redis:
      image: redis:7-alpine
