--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -7,6 +7,8 @@ services:
       - 8000:8000
     depends_on:
       - redis
+    environment:
+      - REDIS_URL=redis://redis:6379
     env_file:
       - .env.development
     volumes:
