--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -8,7 +8,8 @@ services:
     depends_on:
       - redis
     environment:
-      - REDIS_URL=redis://redis:6379
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     env_file:
       - .env.development
     volumes:
